# hassette

./: .coderabbit.yaml  .dockerignore  .editorconfig  .generated-manifest  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  _typos.toml  agents.md  alembic.ini  coverage.system.xml  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  docker_start.sh  eslint.config.mjs  hassette.schema.json  lychee.toml  mise.toml  mkdocs.yml  noxfile.py  package-lock.json  package.json  prek.toml  pyproject.toml  pyrightconfig.json  release-please-config.json  renovate.json  roadmap.md  ruff.toml
.claude/: backlog.md  handoff.md  settings.local.json
.claude/audits/: critique-2026-04-05.md
.claude/commands/: changelog-review.md  triage-issues.md
.claude/interface-design/: system.md
.claude/research/: 2026-02-16-sqlite-command-pattern.md
.claude/rules/: changelog-quality.md  clean-code-findings.md  design-completeness.md  doc-rules.md  frontend-worktree.md  test-conventions.md  voice-guide.md
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml  copilot-instructions.md  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.md  documentation.yml  feature_request.md  feature_request.yml  task.yml
.github/workflows/: build_and_publish_image.yml  cancel-stale-pr-runs.yml  docker-tests.yml  docs.yml  e2e-tests.yml  ha-version-drift.yml  lint.yml  pr-screenshots.yml  pr-title.yml  pypi-drift-check.yml  python_package.yml  release-please.yml  smoke-tests.yml  test_and_lint.yml  tests.yml
.interface-design/: system.md
.mise/tasks/: demo  demo-verify
codegen/: pyproject.toml
codegen/src/hassette_codegen/: __main__.py  domain_data.py  ha_source.py  manifest.py  output.py  overrides.py  pipeline.py  property_types.py  sync_facade.py  type_mapping.py
codegen/src/hassette_codegen/extractors/: _common.py  base_class.py  constants.py  features.py  properties.py  services.py
codegen/src/hassette_codegen/generators/: _env.py  constants.py  entities.py  exports.py  states.py
codegen/src/hassette_codegen/overrides/: automation.toml  binary_sensor.toml  camera.toml  climate.toml  fan.toml  light.toml  media_player.toml  number.toml  script.toml  sensor.toml  sun.toml  timer.toml  weather.toml
codegen/src/hassette_codegen/sync_facade/: __init__.py  __main__.py  ast_utils.py  cli.py  generic.py  recording.py  recording_imports.py  recording_transform.py
codegen/src/hassette_codegen/templates/: entity_wrapper.py.j2  state_model.py.j2
codegen/tests/: test_cli.py  test_constants_and_exports.py  test_desync_docstring.py  test_docstring_builder.py  test_entity_generator.py  test_extractors.py  test_ha_source.py  test_integration.py  test_manifest.py  test_output.py  test_overrides.py  test_services.py  test_state_generator.py
design/: README.md  config-log-level-convention.md  context.md  direction.md  ui-systems-plan.md
design/016-web-audit-fixes/: WP01-backend-fixes.md  WP02-frontend-fixes.md  WP03-schema-validation.md  design.md
design/017-tier1-correctness-wave/: design.md
design/018-rate-limiter-ownership/: design.md
design/019-a11y-css-audit-fixes/: design.md
design/020-edge-case-bug-fixes/: design.md
docs/: api-reference.rst  api.rst  appdaemon-comparison.rst  apps.rst  bus.rst  code-reference.md  code-reference.rst  conf.py  configuration.rst  events.rst  getting-started.rst  index.md  index.rst  install.rst  nav-audit.md  pyrightconfig.json  pyscript-comparison.rst  ruff.toml  scheduler.rst  screenshots.yml  testing.rst  why-hassette.rst
examples/: README.md  backpressure_demo.py  battery.py  bus_overlap.py  climate_controller.py  cover_scheduler.py  demo_stimulator.py  docker-compose.yml  hassette.toml  manual_job_app.py  motion_lights.py  predicate_demo.py  presence.py  presence_tracker.py  scheduler_overlap.py  security_monitor.py  sensor_notification.py
frontend/: .prettierignore  .size-limit.json  .stylelintrc.json  .stylelintrc.mjs  DESIGN_RULES.md  eslint.config.js  index.html  openapi.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  ws-schema.json
scripts/: .ignore  README.md  capture_screenshots.py  compile_requirements.py  demo_stack.py  docker_start.sh  export_schemas.py  fix_volume_files.py  generate-ws-types.cjs  generate_pydantic_models.py  generate_sync_facade.py  hassette_demo.py  schema_helpers.py
tests/: TESTING.md  __init__.py  base_classes.py  conftest.py  test_api.py  test_apps.py  test_auto_detect_apps.py  test_autodetect_apps.py  test_bus.py  test_config.py  test_config_urls.py  test_core.py  test_dependencies.py  test_docker_integration.py  test_docker_requirements_discovery.py  test_e2e.py  test_file_watcher.py  test_history.py  test_listeners.py  test_models.py  test_predicates.py  test_scheduler.py  test_service_watcher.py  test_services.py  test_state_proxy.py  test_state_registry.py  test_states.py  test_task_bucket.py  test_tasks.py  test_triggers.py  test_url_utils.py  test_websocket.py  test_websocket_service.py
tools/: README.md  add_state_docstrings.py  assemble_persona_briefing.py  check_bare_symbols.py  check_breakpoint_drift.py  check_constants_position.py  check_coordinator_internal.py  check_css_module_globals.py  check_dead_global_css.py  check_doc_voice.py  check_exception_names.py  check_file_size.py  check_for_missing_attribute.py  check_global_css_allowlist.py  check_internal_patches.py  check_lazy_imports.py  check_llm_cruft.py  check_module_boundaries.py  check_pypi_wheel.py  check_registration_signatures.py  check_schemas_fresh.py  check_snippet_orphans.py  check_spec_tokens.py  check_tag_version.py  check_template_patterns.py  check_test_factories.py  check_type_checking_position.py  check_undefined_css_refs.py  check_wheel_spa.py  check_xref_coverage.py  extract_doc_page.py  fix_lazy_imports.py  gen_ref_pages.py  generate_constraints.py  generate_sync_facade.py  lint_helpers.py
volumes/: .token
(+3352 files in other folders)
