[build-system]
requires = ["uv_build>=0.10.0,<0.12.0"]
build-backend = "uv_build"

[project]
name = "hassette"
version = "0.39.0"
description = "Hassette is a simple, modern, async-first Python framework for building Home Assistant automations."
readme = "README.md"
authors = [{ name = "Jessica", email = "12jessicasmith34@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.15"
keywords = [
    "home-assistant",
    "automation",
    "async",
    "typed",
    "framework",
    "smart-home",
    "iot",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.11.18",
    "cyclopts>=4.0,<5.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20",
    "anyio>=4.10.0",
    "structlog>=24.4",
    "fastapi>=0.134.0",
    "starlette>=1.0.1",  # explicit floor for CVE-2026-48710 fix
    "croniter>=6.0.0",
    "deepdiff>=8.6.1",
    "diskcache>=5.6.3",
    "fair-async-rlock>=1.0.7",
    "frozendict>=2.4.7",
    "glom>=24.11.0",
    "humanize>=4.13.0",
    "mergedeep>=1.3.4",
    "orjson>=3.10.18",
    "packaging>=25.0",
    "platformdirs>=4.3.8",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.1.0",
    "python-slugify>=8.0",
    "tenacity>=9.1.2",
    "typing-extensions==4.15.*",
    "uuid-utils>=0.9.0",
    "uvicorn[standard]>=0.34.0",
    "watchfiles>=1.1.0",
    "whenever==0.9.*",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=1.0.0"]

[project.urls]
Homepage = "https://github.com/nodejsmith/hassette"
Repository = "https://github.com/nodejsmith/hassette"
Documentation = "https://github.com/nodejsmith/hassette#readme"
"Bug Reports" = "https://github.com/nodejsmith/hassette/issues"
Changelog = "https://github.com/nodejsmith/hassette/blob/main/CHANGELOG.md"


[dependency-groups]
dev = [
    "bcrypt>=4.0",
    "hassette-codegen",
    "pyright>=1.1.408",
    "shot-scraper>=1.5",
    "slotscheck>=0.19.1",
    "tomli-w>=1.2.0",
]
test = [
    "coverage[toml]>=7.10.7",
    "nox>=2025.5.1",
    "playwright>=1.52.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "pytest-playwright>=0.6.2",
    "pytest-randomly>=3.16.0",
    "pytest-rerunfailures>=15.0",
    "pytest-repeat>=0.9.4",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "pytest>=8.4.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.6.0",
    "mkdocs-autorefs>=0.5.0",
    "mkdocstrings[python]>=0.25.0",
    "pymdown-extensions>=10.8.1",
    "watchdog>=6.0.0",
    "ruff>=0.14.9",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-panzoom-plugin>=0.5.2",
]

[tool.uv]
default-groups = ["dev", "test", "docs"]

[tool.uv.sources]
hassette-codegen = { path = "codegen", editable = true }

[project.scripts]
hassette = "hassette.__main__:entrypoint"

[tool.uv.build-backend]
module-name = "hassette"

[tool.pytest.ini_options]
pythonpath = ["src", "tools"]
norecursedirs = ["codegen"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
    "error",
    "default:.*does not declare restart_spec.*:UserWarning",
    "default::ResourceWarning:anyio\\.streams\\.memory",
    "default::ResourceWarning:aiohttp\\.client",
    "default::ResourceWarning:aiosqlite\\.core",
    "default::ResourceWarning:aiohttp\\.connector",
    "default:Top-level \\[apps\\.\\*\\]:DeprecationWarning:hassette\\.config\\.classes",
]
# Skip slow Docker tests by default (run with: pytest -m docker)
addopts = "-m 'not docker and not system and not system_destructive'"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "docker: marks tests that require Docker and are slow (run explicitly with '-m docker')",
    "e2e: marks browser-based end-to-end tests requiring Playwright (run explicitly with '-m e2e')",
    "system: marks system tests requiring a running HA Docker container (run explicitly with 'nox -s system')",
    "system_destructive: system tests that restart HA or inject failures — run in isolation after normal system tests",
]

[tool.coverage.run]
branch = true         # measure branch coverage, not just lines
source = ["hassette"] # your packages/modules
parallel = true       # enable combining across workers/CI shards
relative_files = true # stable paths in CI
# Measure subprocesses (pytest-cov will set env automatically; this is belt+suspenders):
concurrency = ["thread", "multiprocessing"]
omit = ["*/__init__.py", "*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
# fail_under = 85 # local default; CI can override
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
