[project]
name = "hassette-codegen"
version = "0.1.0"
description = "Code generator for hassette entity wrappers, state models, and constants from Home Assistant core"
requires-python = ">=3.11"
dependencies = [
    "jinja2",
    "pyyaml",
]

[dependency-groups]
dev = ["pytest", "ruff"]

[project.scripts]
hassette-codegen = "hassette_codegen.__main__:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportUnusedFunction = "none"
